--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "chart.js": "^4.4.3",
+    "chart.js": "^4.4.4",
     "googleapis": "^134.0.0",
     "next": "^14.2.2",
     "react": "^18",
@@ -22,10 +22,11 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "autoprefixer": "^10.4.20",
     "eslint": "^8",
-    "eslint-config-next": "14.2.2",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
+    "eslint-config-next": "^0.2.4",
+    "postcss": "^8.4.41",
+    "tailwindcss": "^3.2.0",
     "typescript": "^5"
   }
 }
